# Detection

./: .gitignore  CHANGELOG.md  PycharmProjects.lnk  README.md  START.txt  TECHNICAL_REPORT.md  app.py  config.py  generate_report.py  predict.py  pyproject.toml  requirements.txt  run.py  run_app.py  run_app.sh  setup.py  train.py
.github/workflows/: ci.yml
data/chest_xray/: README.txt
docs/: ARCHITECTURE_AND_SYSTEM_RU.md  README.md  REPO_QUALITY.md  VIDEO_DEFENSE_SCRIPT.md
lungdx/: __init__.py  clinical.py  constants.py  model_service.py  pdf_export.py  reports_io.py  result_ui.py  session.py  styles.py  ui_main.py  worklist_streamlit.py
scripts/: check_negatives.py  download_dataset.py  evaluate.py  generate_diagrams.py  generate_fixed_thesis_report.py  generate_metrics_visual.py  generate_report.py  rebalance_dataset.py
src/: __init__.py  dataset.py  inference.py  metrics.py  model.py
tests/: test_clinical.py  test_inference.py  test_pdf_export.py
weights/: class_names.json  training_history.json
